# SharedMemory

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  conanfile.py
docs/: Doxyfile.in
src/: ArrayShm.h  ArrayStruct.h  BaseShmm.h  CMakeLists.txt  HashTable.h  LinkedVariantList.h  SharedMemoryInfo.cpp  SharedMemoryInfo.h  SharedVector.h  VariantNode.h  arrayshm.h  conanfile.py  ext.cpp  ext.h  main.cpp  shmm_v1.cpp  shmm_v1.h
